--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "1.3.13",
-    "@material-ui/core": "4.11.3",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/pickers": "3.2.10",
     "@unicef/material-ui-currency-textfield": "0.8.6",
     "add": "2.0.6",
     "axios": "0.21.1",
     "date-fns": "2.18.0",
+    "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.8",
     "styled-components": "5.2.1",
     "typescript": "4.1.2",
     "web-vitals": "1.0.1",
@@ -28,6 +30,7 @@
     "@types/node": "12.0.0",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "@types/recharts": "^1.8.19",
     "@types/styled-components": "5.1.7",
     "axios-mock-adapter": "1.19.0"
   },
