--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/react": "11.1.0",
     "@testing-library/react-hooks": "5.1.0",
     "@testing-library/user-event": "12.1.10",
+    "@types/enzyme": "^3.10.8",
     "@types/jest": "26.0.15",
     "@types/node": "12.0.0",
     "@types/react": "17.0.0",
@@ -34,6 +35,8 @@
     "@types/recharts": "^1.8.19",
     "@types/styled-components": "5.1.7",
     "axios-mock-adapter": "1.19.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "serve": "^11.3.2"
   },
   "scripts": {
